add personal portfolio project

--- a/Frontend Projects/03-personal-portfolio/projects.html
+++ b/Frontend Projects/03-personal-portfolio/projects.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A simple website multipage used HTML only">
     <meta name="keywords" content="Frontend Project, HTML, cv project, roadmap.sh">
     <meta name="author" content="Fikri">
-    <title>Home Page</title>
+    <title>Projects</title>
     <link rel="shortcut icon" href="../assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -21,8 +21,6 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Frontend Developer</h1>
-        <p>HTML only with proper layout, no styling</p>
     </header>
     <main>
         <section>
@@ -34,32 +32,6 @@
                 <li><a href="#">Countdown Timer</a></li>
                 <li><a href="#">Product Upcoming Page</a></li>
             </ul>
-        </section>
-        <section>
-            <h2>Work Experience</h2>
-            <p><b>roadmap.sh</b></p>
-            <p>Solved all the frontend projects</p>
-            <a href="#">Visit my Profile</a>
-        </section>
-        <section>
-            <h2>OpenSource  Work</h2>
-            <p>Contributed to 50 opensource projects. Made by own projects with 200 github stars.</p>
-            <a href="#">Visit my Github Profile</a>
-        </section>
-        <section>
-            <h2>Education</h2>
-            <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
-            <p>Courses i took :</p>
-            <ul>
-                <li>Belajar Dasar Pemrograman Web</li>
-                <li>Belajar Git Dasar</li>
-                <li>Belajar Bootstrap</li>
-                <li>Belajar JavaScript Dasar</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Reviews from my Teachers</h2>
-            <ul></ul>
         </section>
     </main>
     <footer>
